# llm-conversational-tuning

./: README.md  exp_inference.py  index.html  inference_classifier.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test.py  train.py  train_lora.py
notebooks/: README.md  analyze_data.ipynb  friendly_train_Llama.ipynb  parse_classifier_data.ipynb  preprocess_data.ipynb
src/: README.md  data_preprocess.py  dialogue_dataset.py
train/: 3_llama_train_ONE_REPLIC.ipynb  README.md
