[tool:pytest]
norecursedirs =
    .git
    dist
    build
    contrib
python_files =
    test_*.py
# doctest_plus = disabled
addopts =
    --strict
    --doctest-modules
    --color=yes
markers =
    slow
    remote_data
    filterwarnings
    gpus_param_tests
junit_duration_report = call

[flake8]
ignore = D203,F401,E203,W503,E231
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    build,
    dist,
    .pytest_cache,
    .vscode
max-complexity = 10
max-line-length = 119

[isort]
profile=black
src_paths=src # ,tests
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True

[metadata]
description-file = README.md